--- a/project_final/front/index.html
+++ b/project_final/front/index.html
@@ -97,13 +97,13 @@
                 </li>
               </ul>
             <li class="nav-item">
-              <a class="nav-link" href="itempage.html">BEST</a>
+              <a class="nav-link" href="#frontPrograms1">BEST</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="itempage.html">OUTER</a>
+              <a class="nav-link" href="#frontPrograms2">PANTS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="itempage.html">PANTS</a>
+              <a class="nav-link" href="#frontPrograms3">OUTER</a>
             </li>
             <li class="nav-item">
               <a class="nav-link btn btn-outline-secondary" href="#"><i class="fa fa-search"></i></a>
@@ -142,13 +142,13 @@
                 </ul>
               </li>
               <li>
-                <a href="itempage.html" class="text-decoration-none link-dark">BEST</a>
+                <a href="#frontPrograms1" class="text-decoration-none link-dark">BEST</a>
               </li>
               <li>
-                <a href="itempage.html" class="text-decoration-none link-dark">OUTER</a>
+                <a href="#frontPrograms2" class="text-decoration-none link-dark">PANTS</a>
               </li>
               <li>
-                <a href="itempage.html" class="text-decoration-none link-dark">PANTS</a>
+                <a href="#frontPrograms3" class="text-decoration-none link-dark">OUTER</a>
               </li>
               </li>
               <li>
@@ -222,12 +222,13 @@
     </button>
   </section>
 
-  <section id="frontPrograms">
+  <!--BEST-->
+  <section id="frontPrograms1">
     <div class="section-content">
       <div class="container-xxl">
         <div class="row justify-content-center">
           <div class="col-md-10 text-center">
-            <h3 class="mb-3">Our Best Items</h3>
+            <h3 class="mb-3">BEST</h3>
             <br />
             <div class="row justify-content-center px2">
               <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
@@ -253,7 +254,7 @@
               <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
                 <div class="program-item bg-white border p-2 shadow-box">
                   <a href="page.html" class="text-decoration-none">
-                    <p class="mb-0">PANTS</p>
+                    <p class="mb-0">OUTER</p>
                     <img src="https://dakuang.co.kr/web/product/medium/202303/961bea80ecafaabd8e9ab1b702dd7f30.jpg"
                       alt="Project 3" class="img-fluid" />
                     <p class="mb-0">남성용 투웨이 포켓 카라 레더자켓</p>
@@ -270,6 +271,47 @@
                   </a>
                 </div>
               </div>
+              <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
+                <div class="program-item bg-white border p-2 shadow-box">
+                  <a href="page.html" class="text-decoration-none">
+                    <p class="mb-0">OUTER</p>
+                    <img src="https://dakuang.co.kr/web/product/medium/202311/3f537e41f9ece46dc9d98831f6b977d8.jpg"
+                      alt="Project 3" class="img-fluid" />
+                    <p class="mb-0">남성용 올겨울 강자 남자 무스탕 자켓</p>
+                  </a>
+                </div>
+              </div>
+              <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
+                <div class="program-item bg-white border p-2 shadow-box">
+                  <a href="page.html" class="text-decoration-none">
+                    <p class="mb-0">OUTER</p>
+                    <img src="https://dakuang.co.kr/web/product/medium/202311/f29c0260f44cf44058277fcf7d734ee2.jpg"
+                      alt="Project 3" class="img-fluid" />
+                    <p class="mb-0">남성용 매일 포근함 남자 롱 패딩코트</p>
+                  </a>
+                </div>
+              </div>
+              <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
+                <div class="program-item bg-white border p-2 shadow-box">
+                  <a href="page.html" class="text-decoration-none">
+                    <p class="mb-0">PANTS</p>
+                    <img src="https://dakuang.co.kr/web/product/medium/202310/99390289af781e75a6807c30aa6c670b.jpg"
+                      alt="Project 3" class="img-fluid" />
+                    <p class="mb-0">남성용 힙하게 벤딩 스판 포켓 데님팬츠</p>
+                  </a>
+                </div>
+              </div>
+              <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
+                <div class="program-item bg-white border p-2 shadow-box">
+                  <a href="page.html" class="text-decoration-none">
+                    <p class="mb-0">PANTS</p>
+                    <img src="https://dakuang.co.kr/web/product/medium/202310/fec3ffea6b190afcb6effb4b5f9c6da2.jpg"
+                      alt="Project 3" class="img-fluid" />
+                    <p class="mb-0">남성용 슬롯 뒷밴딩 세미 와이드 데님팬츠</p>
+                  </a>
+                </div>
+                <a id="home1" href="#navPrimary">HOME</a>
+              </div>
             </div>
           </div>
         </div>
@@ -277,7 +319,8 @@
     </div>
   </section>
 
-  <section id="frontPrograms">
+  <!--PANTS-->
+  <section id="frontPrograms2">
     <div class="section-content">
       <div class="container-xxl">
         <div class="row justify-content-center">
@@ -325,6 +368,47 @@
                   </a>
                 </div>
               </div>
+              <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
+                <div class="program-item bg-white border p-2 shadow-box">
+                  <a href="page.html" class="text-decoration-none">
+                    <p class="mb-0">PANTS</p>
+                    <img src="https://dakuang.co.kr/web/product/medium/202307/3a7a2f6bc5abc78c1d40b036b24f578e.jpg"
+                      alt="Project 4" class="img-fluid" />
+                    <p class="mb-0">남성용 트랙주름 셔링 와이드팬츠</p>
+                  </a>
+                </div>
+              </div>
+              <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
+                <div class="program-item bg-white border p-2 shadow-box">
+                  <a href="page.html" class="text-decoration-none">
+                    <p class="mb-0">PANTS</p>
+                    <img src="https://dakuang.co.kr/web/product/medium/202307/209716b830ce7bbf625df0998bec80ea.jpg"
+                      alt="Project 4" class="img-fluid" />
+                    <p class="mb-0">남성용 빈티지 롱 와이드 데님 팬츠 청바지</p>
+                  </a>
+                </div>
+              </div>
+              <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
+                <div class="program-item bg-white border p-2 shadow-box">
+                  <a href="page.html" class="text-decoration-none">
+                    <p class="mb-0">PANTS</p>
+                    <img src="https://dakuang.co.kr/web/product/medium/202310/99390289af781e75a6807c30aa6c670b.jpg"
+                      alt="Project 4" class="img-fluid" />
+                    <p class="mb-0">남성용 힙하게 밴딩 스판 포켓 데님 팬츠</p>
+                  </a>
+                </div>
+              </div>
+              <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
+                <div class="program-item bg-white border p-2 shadow-box">
+                  <a href="page.html" class="text-decoration-none">
+                    <p class="mb-0">PANTS</p>
+                    <img src="https://dakuang.co.kr/web/product/medium/202310/fec3ffea6b190afcb6effb4b5f9c6da2.jpg"
+                      alt="Project 4" class="img-fluid" />
+                    <p class="mb-0">남성용 슬롯 뒷밴딩 세미 와이드 데님 팬츠</p>
+                  </a>
+                </div>
+                <a id="home1" href="#navPrimary">HOME</a>
+              </div>
             </div>
           </div>
         </div>
@@ -332,7 +416,8 @@
     </div>
   </section>
 
-  <section id="frontPrograms">
+  <!--OUTER-->
+  <section id="frontPrograms3">
     <div class="section-content">
       <div class="container-xxl">
         <div class="row justify-content-center">
@@ -382,6 +467,47 @@
                   </a>
                 </div>
               </div>
+              <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
+                <div class="program-item bg-white border p-2 shadow-box">
+                  <a href="page.html" class="text-decoration-none">
+                    <p class="mb-0">OUTER</p>
+                    <img src="https://dakuang.co.kr/web/product/medium/202303/63178c285dd98a7d5a0ef1d1449fb235.jpg"
+                      alt="Project 4" class="img-fluid" />
+                    <p class="mb-0">남성용 간절기 아우터 배색 남자 가디건</p>
+                  </a>
+                </div>
+              </div>
+              <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
+                <div class="program-item bg-white border p-2 shadow-box">
+                  <a href="page.html" class="text-decoration-none">
+                    <p class="mb-0">OUTER</p>
+                    <img src="https://dakuang.co.kr/web/product/medium/202305/7ff5fdbf3c59d74823eb7d9e46315a71.jpg"
+                      alt="Project 4" class="img-fluid" />
+                    <p class="mb-0">남성용 하이텐션 댄디 남자 싱클자켓</p>
+                  </a>
+                </div>
+              </div>
+              <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
+                <div class="program-item bg-white border p-2 shadow-box">
+                  <a href="page.html" class="text-decoration-none">
+                    <p class="mb-0">OUTER</p>
+                    <img src="https://dakuang.co.kr/web/product/medium/202311/f29c0260f44cf44058277fcf7d734ee2.jpg"
+                      alt="Project 4" class="img-fluid" />
+                    <p class="mb-0">남성용 매일 포근함 남자 롱 패딩 코트</p>
+                  </a>
+                </div>
+              </div>
+              <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
+                <div class="program-item bg-white border p-2 shadow-box">
+                  <a href="page.html" class="text-decoration-none">
+                    <p class="mb-0">OUTER</p>
+                    <img src="https://dakuang.co.kr/web/product/medium/202311/3f537e41f9ece46dc9d98831f6b977d8.jpg"
+                      alt="Project 4" class="img-fluid" />
+                    <p class="mb-0">남성용 올겨울 강자 남자 무스탕 자켓</p>
+                  </a>
+                </div>
+                <a id="home1" href="#navPrimary">HOME</a>
+              </div>
             </div>
           </div>
         </div>
@@ -399,19 +525,22 @@
               <h5>Fashion People</h5>
             </a>
             <p>
-              CEO. 박건욱 대표이사. 임도원 tel. 070-1234-5678<br />Business no.
-              010-3694-5500<br />mail. pkw2587@gmail.com<br />address. [000000]
-              서울특별시 강남구<br />역삼동 금산빌딩 2층 FPP
+               <strong>CEO:</strong>박건욱 <br>
+              <strong>대표이사:</strong> 임도원 <br>
+              <strong>tel:</strong>070-1234-5678<br />
+              <strong>Business no:</strong>010-3694-5500<br />
+              <strong>mail:</strong> pkw2587@gmail.com<br />
+              <strong>address:</strong>서울특별시 강남구 역삼동 금산빌딩 2층 FPP
             </p>
           </div>
           <div class="col-md-2 mb-4 d-none d-md-block">
-            <h5>C/S CENTER</h5>
+            <h4>C/S CENTER</h4>
             <p>010-3694-5500</p>
             <p>월-금 AM 10:00 - PM 18:00</p>
             <p>토-일 AM 10:00 - PM 14:00</p>
           </div>
           <div class="col-md-2 mb-4 d-none d-md-block">
-            <h5>GUIDE</h5>
+            <h4>GUIDE</h4>
             <p>이용약관<br />개인정보 처리방침</p>
           </div>
           <div class="col-md-4 mb-4">
@@ -456,17 +585,17 @@
       <hr class="my-5" />
       <ul class="social-icons list-unstyled d-flex justify-content-center">
         <li class="mx-2">
-          <a href="#" class="twitter-link">
+          <a href="" class="twitter-link">
             <i class="fab fa-twitter fa-2x"></i>
           </a>
         </li>
         <li class="mx-2">
-          <a href="#" class="facebook-link">
+          <a href="" class="facebook-link">
             <i class="fab fa-facebook-square fa-2x"></i>
           </a>
         </li>
         <li class="mx-2">
-          <a href="#" class="youtube-link">
+          <a href="" class="youtube-link">
             <i class="fab fa-youtube fa-2x"></i>
           </a>
         </li>
