--- a/project_final/front/index.html
+++ b/project_final/front/index.html
@@ -42,7 +42,7 @@
                   <div class="sign-container">
                     <!-- 비회원 -->
                     <div class="unsigned">
-                      <a href="./signin.html" class="LG">Login/Register</a>
+                      <a href="./login.html" class="LG">Login/SinUp</a>
                     </div>
 
                     <!-- 회원 -->
@@ -109,7 +109,7 @@
               <a class="nav-link btn btn-outline-secondary" href="#"><i class="fa fa-search"></i></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="myinfo.html">MY</a>
+              <a class="nav-link" href="myinfo.html">MyInfo</a>
             </li>
           </ul>
         </div>
@@ -120,6 +120,7 @@
           data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
           <span class="navbar-toggler-icon"></span>
         </button>
+        
         <!-- 오른쪽 상단 메뉴 표시 -->
         <div class="offcanvas offcanvas-end d-block d-md-none" data-bs-scroll="true" tabindex="-1" id="offcanvasRight"
           aria-labelledby="offcanvasRightLabel">
@@ -152,7 +153,7 @@
               </li>
               </li>
               <li>
-                <a href="myinfo.html" class="text-decoration-none link-dark">MY</a>
+                <a href="myinfo.html" class="text-decoration-none link-dark">MyInfo</a>
               </li>
               <li>
                 <a href="signin.html" class="text-decoration-none link-dark">로그인</a>
@@ -181,21 +182,15 @@
       <div class="carousel-item active"
         style="background-image: url('https://dakuang.co.kr/web/product/medium/202304/71a1ad20db6c37ae38d5b5534e38033b.jpg')">
         <div class="carousel-overlay text-white d-flex justify-content-center align-items-center">
-          <div class="carousel-text text-center px-md-5">
-            <h1 class="carousel-title display-4">Slide 1</h1>
-            <h3 class="carousel-subtitle">
-              Slide 1 Description. Lorem ipsum dolor sit.
-            </h3>
-          </div>
+
         </div>
       </div>
       <div class="carousel-item"
         style="background-image: url('https://dakuang.co.kr/web/product/medium/202306/7fa0ae22c66cc718d2b8dae9ba18f384.jpg')">
         <div class="carousel-overlay text-white d-flex justify-content-center align-items-center">
           <div class="carousel-text text-center px-md-5">
-            <h1 class="carousel-title display-4">Slide 2</h1>
+            <h1 class="carousel-title display-4"></h1>
             <h3 class="carousel-subtitle">
-              Slide 2 Description. Lorem ipsum dolor sit.
             </h3>
           </div>
         </div>
@@ -204,9 +199,8 @@
         style="background-image: url('https://dakuang.co.kr/web/product/medium/202303/961bea80ecafaabd8e9ab1b702dd7f30.jpg')">
         <div class="carousel-overlay text-white d-flex justify-content-center align-items-center">
           <div class="carousel-text text-center px-md-5">
-            <h1 class="carousel-title display-4">Slide 3</h1>
+            <h1 class="carousel-title display-4"></h1>
             <h3 class="carousel-subtitle">
-              Slide 3 Description. Lorem ipsum dolor sit.
             </h3>
           </div>
         </div>
@@ -233,17 +227,17 @@
             <div class="row justify-content-center px2">
               <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
                 <div class="program-item bg-white border p-2 shadow-box">
-                  <a href="page.html" class="text-decoration-none">
+                  <a href="product_page/outer1.html" class="text-decoration-none">
                     <p class="mb-0">OUTER</p>
                     <img src="https://dakuang.co.kr/web/product/medium/202303/718c96d3906c6c8b8c8938eaea978828.jpg"
                       alt="Project 1" class="img-fluid" />
-                    <p class="mb-0">남성용 로얄고급 배색 후드집업</p>
+                    <p class="mb-0">남성용 로얄고급 배색 <br>검정 후드집업</p>
                   </a>
                 </div>
               </div>
               <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
                 <div class="program-item bg-white border p-2 shadow-box">
-                  <a href="page.html" class="text-decoration-none">
+                  <a href="product_page/pants1.html" class="text-decoration-none">
                     <p class="mb-0">PANTS</p>
                     <img src="https://dakuang.co.kr/web/product/medium/20200326/00f6e2f5654d819531271d5a725cdce2.jpg"
                       alt="Project 2" class="img-fluid" />
@@ -253,7 +247,7 @@
               </div>
               <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
                 <div class="program-item bg-white border p-2 shadow-box">
-                  <a href="page.html" class="text-decoration-none">
+                  <a href="product_page/outer2.html" class="text-decoration-none">
                     <p class="mb-0">OUTER</p>
                     <img src="https://dakuang.co.kr/web/product/medium/202303/961bea80ecafaabd8e9ab1b702dd7f30.jpg"
                       alt="Project 3" class="img-fluid" />
@@ -263,17 +257,17 @@
               </div>
               <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
                 <div class="program-item bg-white border p-2 shadow-box">
-                  <a href="page.html" class="text-decoration-none">
+                  <a href="product_page/pants4.html" class="text-decoration-none">
                     <p class="mb-0">OUTER</p>
                     <img src="https://dakuang.co.kr/web/product/medium/202310/9c16f49137c16fc7754140f4ab03fda3.jpg"
                       alt="Project 4" class="img-fluid" />
-                    <p class="mb-0">남성용 편안한 남자 와이드 워싱 데님 팬츠/p>
+                    <p class="mb-0">남성용 편안한 남자 와이드 워싱 데님 팬츠</p>
                   </a>
                 </div>
               </div>
               <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
                 <div class="program-item bg-white border p-2 shadow-box">
-                  <a href="page.html" class="text-decoration-none">
+                  <a href="product_page/outer8.html" class="text-decoration-none">
                     <p class="mb-0">OUTER</p>
                     <img src="https://dakuang.co.kr/web/product/medium/202311/3f537e41f9ece46dc9d98831f6b977d8.jpg"
                       alt="Project 3" class="img-fluid" />
@@ -283,7 +277,7 @@
               </div>
               <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
                 <div class="program-item bg-white border p-2 shadow-box">
-                  <a href="page.html" class="text-decoration-none">
+                  <a href="product_page/outer7.html" class="text-decoration-none">
                     <p class="mb-0">OUTER</p>
                     <img src="https://dakuang.co.kr/web/product/medium/202311/f29c0260f44cf44058277fcf7d734ee2.jpg"
                       alt="Project 3" class="img-fluid" />
@@ -293,7 +287,7 @@
               </div>
               <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
                 <div class="program-item bg-white border p-2 shadow-box">
-                  <a href="page.html" class="text-decoration-none">
+                  <a href="product_page/pants7.html" class="text-decoration-none">
                     <p class="mb-0">PANTS</p>
                     <img src="https://dakuang.co.kr/web/product/medium/202310/99390289af781e75a6807c30aa6c670b.jpg"
                       alt="Project 3" class="img-fluid" />
@@ -303,7 +297,7 @@
               </div>
               <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
                 <div class="program-item bg-white border p-2 shadow-box">
-                  <a href="page.html" class="text-decoration-none">
+                  <a href="product_page/pants8.html" class="text-decoration-none">
                     <p class="mb-0">PANTS</p>
                     <img src="https://dakuang.co.kr/web/product/medium/202310/fec3ffea6b190afcb6effb4b5f9c6da2.jpg"
                       alt="Project 3" class="img-fluid" />
@@ -330,7 +324,7 @@
             <div class="row justify-content-center px2">
               <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
                 <div class="program-item bg-white border p-2 shadow-box">
-                  <a href="page.html" class="text-decoration-none">
+                  <a href="product_page/pants1.html" class="text-decoration-none">
                     <p class="mb-0">PANTS</p>
                     <img src="https://dakuang.co.kr/web/product/medium/20200326/00f6e2f5654d819531271d5a725cdce2.jpg"
                       alt="Project 1" class="img-fluid" />
@@ -340,7 +334,7 @@
               </div>
               <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
                 <div class="program-item bg-white border p-2 shadow-box">
-                  <a href="page.html" class="text-decoration-none">
+                  <a href="product_page/pants2.html" class="text-decoration-none">
                     <p class="mb-0">PANTS</p>
                     <img src="https://dakuang.co.kr/web/product/medium/202311/1d2c72dca2f86503e9b7758cb82b4af7.jpg"
                       alt="Project 2" class="img-fluid" />
@@ -350,7 +344,7 @@
               </div>
               <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
                 <div class="program-item bg-white border p-2 shadow-box">
-                  <a href="page.html" class="text-decoration-none">
+                  <a href="product_page/pants3.html" class="text-decoration-none">
                     <p class="mb-0">PANTS</p>
                     <img src="https://dakuang.co.kr/web/product/medium/202311/79d58467b8874aa0da8c101bd402a396.jpg"
                       alt="Project 3" class="img-fluid" />
@@ -360,7 +354,7 @@
               </div>
               <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
                 <div class="program-item bg-white border p-2 shadow-box">
-                  <a href="page.html" class="text-decoration-none">
+                  <a href="product_page/pants4.html" class="text-decoration-none">
                     <p class="mb-0">PANTS</p>
                     <img src="https://dakuang.co.kr/web/product/medium/202310/9c16f49137c16fc7754140f4ab03fda3.jpg"
                       alt="Project 4" class="img-fluid" />
@@ -370,7 +364,7 @@
               </div>
               <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
                 <div class="program-item bg-white border p-2 shadow-box">
-                  <a href="page.html" class="text-decoration-none">
+                  <a href="product_page/pants5.html" class="text-decoration-none">
                     <p class="mb-0">PANTS</p>
                     <img src="https://dakuang.co.kr/web/product/medium/202307/3a7a2f6bc5abc78c1d40b036b24f578e.jpg"
                       alt="Project 4" class="img-fluid" />
@@ -380,7 +374,7 @@
               </div>
               <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
                 <div class="program-item bg-white border p-2 shadow-box">
-                  <a href="page.html" class="text-decoration-none">
+                  <a href="product_page/pants6.html" class="text-decoration-none">
                     <p class="mb-0">PANTS</p>
                     <img src="https://dakuang.co.kr/web/product/medium/202307/209716b830ce7bbf625df0998bec80ea.jpg"
                       alt="Project 4" class="img-fluid" />
@@ -390,7 +384,7 @@
               </div>
               <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
                 <div class="program-item bg-white border p-2 shadow-box">
-                  <a href="page.html" class="text-decoration-none">
+                  <a href="product_page/pants7.html" class="text-decoration-none">
                     <p class="mb-0">PANTS</p>
                     <img src="https://dakuang.co.kr/web/product/medium/202310/99390289af781e75a6807c30aa6c670b.jpg"
                       alt="Project 4" class="img-fluid" />
@@ -400,7 +394,7 @@
               </div>
               <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
                 <div class="program-item bg-white border p-2 shadow-box">
-                  <a href="page.html" class="text-decoration-none">
+                  <a href="product_page/pants8.html" class="text-decoration-none">
                     <p class="mb-0">PANTS</p>
                     <img src="https://dakuang.co.kr/web/product/medium/202310/fec3ffea6b190afcb6effb4b5f9c6da2.jpg"
                       alt="Project 4" class="img-fluid" />
@@ -427,17 +421,17 @@
             <div class="row justify-content-center px2">
               <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
                 <div class="program-item bg-white border p-2 shadow-box">
-                  <a href="page.html" class="text-decoration-none">
+                  <a href="product_page/outer1.html" class="text-decoration-none">
                     <p class="mb-0">OUTER</p>
                     <img src="https://dakuang.co.kr/web/product/medium/202303/718c96d3906c6c8b8c8938eaea978828.jpg"
                       alt="Project 1" class="img-fluid" />
-                    <p class="mb-0">남성용 로얄고급 배색 후드집업</p>
+                    <p class="mb-0">남성용 로얄고급 배색<br> 검정 후드집업</p>
                   </a>
                 </div>
               </div>
               <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
                 <div class="program-item bg-white border p-2 shadow-box">
-                  <a href="page.html" class="text-decoration-none">
+                  <a href="product_page/outer2.html" class="text-decoration-none">
                     <p class="mb-0">OUTER</p>
                     <img src="https://dakuang.co.kr/web/product/medium/202303/961bea80ecafaabd8e9ab1b702dd7f30.jpg"
                       alt="Project 2" class="img-fluid" />
@@ -447,49 +441,49 @@
               </div>
               <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
                 <div class="program-item bg-white border p-2 shadow-box">
-                  <a href="page.html" class="text-decoration-none">
+                  <a href="product_page/outer3.html" class="text-decoration-none">
                     <p class="mb-0">OUTER</p>
                     <img src="https://dakuang.co.kr/web/product/medium/202304/71a1ad20db6c37ae38d5b5534e38033b.jpg"
                       alt="Project 3" class="img-fluid" />
                     <p class="mb-0">
-                      남성용 시그니쳐 S나염 데님자켓 청자켓
+                      남성용 시그니쳐 데님 <br>청자켓
                     </p>
                   </a>
                 </div>
               </div>
               <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
                 <div class="program-item bg-white border p-2 shadow-box">
-                  <a href="page.html" class="text-decoration-none">
+                  <a href="product_page/outer4.html" class="text-decoration-none">
                     <p class="mb-0">OUTER</p>
                     <img src="https://dakuang.co.kr/web/product/medium/202306/7fa0ae22c66cc718d2b8dae9ba18f384.jpg"
                       alt="Project 4" class="img-fluid" />
-                    <p class="mb-0">남성용 매일 댄디 코튼 남자 싱클자켓</p>
+                    <p class="mb-0">남성용 매일 댄디 코튼 <br> 싱클자켓</p>
                   </a>
                 </div>
               </div>
               <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
                 <div class="program-item bg-white border p-2 shadow-box">
-                  <a href="page.html" class="text-decoration-none">
+                  <a href="product_page/outer5.html" class="text-decoration-none">
                     <p class="mb-0">OUTER</p>
                     <img src="https://dakuang.co.kr/web/product/medium/202303/63178c285dd98a7d5a0ef1d1449fb235.jpg"
                       alt="Project 4" class="img-fluid" />
-                    <p class="mb-0">남성용 간절기 아우터 배색 남자 가디건</p>
+                    <p class="mb-0">남성용 간절기 아우터<br> 남자 가디건</p>
                   </a>
                 </div>
               </div>
               <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
                 <div class="program-item bg-white border p-2 shadow-box">
-                  <a href="page.html" class="text-decoration-none">
+                  <a href="product_page/outer6.html" class="text-decoration-none">
                     <p class="mb-0">OUTER</p>
                     <img src="https://dakuang.co.kr/web/product/medium/202305/7ff5fdbf3c59d74823eb7d9e46315a71.jpg"
                       alt="Project 4" class="img-fluid" />
-                    <p class="mb-0">남성용 하이텐션 댄디 남자 싱클자켓</p>
+                    <p class="mb-0">남성용 하이텐션 댄디 <br> 싱클자켓</p>
                   </a>
                 </div>
               </div>
               <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
                 <div class="program-item bg-white border p-2 shadow-box">
-                  <a href="page.html" class="text-decoration-none">
+                  <a href="product_page/outer7.html" class="text-decoration-none">
                     <p class="mb-0">OUTER</p>
                     <img src="https://dakuang.co.kr/web/product/medium/202311/f29c0260f44cf44058277fcf7d734ee2.jpg"
                       alt="Project 4" class="img-fluid" />
@@ -499,7 +493,7 @@
               </div>
               <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
                 <div class="program-item bg-white border p-2 shadow-box">
-                  <a href="page.html" class="text-decoration-none">
+                  <a href="product_page/outer8.html" class="text-decoration-none">
                     <p class="mb-0">OUTER</p>
                     <img src="https://dakuang.co.kr/web/product/medium/202311/3f537e41f9ece46dc9d98831f6b977d8.jpg"
                       alt="Project 4" class="img-fluid" />
