--- a/project_final/front/intro.html
+++ b/project_final/front/intro.html
@@ -85,22 +85,9 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="intro.html"><i class="fa fa-info fa-lg"></i><p>Intro</p></a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="fas fa-book-open fa-lg"></i><p>Category</p>
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="itempage.html">New</a></li>
-              <li><a class="dropdown-item" href="itempage.html">Sale</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="itempage.html">Outer</a></li>
-              <li><a class="dropdown-item" href="itempage.html">Shirts</a></li>
-              <li><a class="dropdown-item" href="itempage.html">Pants</a></li>
-              <li><a class="dropdown-item" href="itempage.html">Shoes</a></li>
-            </ul>
-          </li>
+         
           <li class="nav-item">
-            <a href="reservation.html" class="nav-link"><i class="fa fa-desktop fa-lg"></i><p>MyInfo</p></a>
+            <a href="myinfo.html" class="nav-link"><i class="fa fa-desktop fa-lg"></i><p>MyInfo</p></a>
           </li>
         </ul>
       </div>
@@ -116,7 +103,8 @@
         <div id="banner-collape" class="collapse">
           <br>
           <hr class="hr-white my-4">
-          <p>ceo 미스터 박</p>
+          <p><h3>ceo 박건욱</h3><br><h3>대표이사 임도원</h3><br><h3>총무 서강준</h3><br><h3>회계 안젤리나</h3></p>
+          
         </div>
         <p class="lead">
           <button class="btn btn-outline-light btn-lg" data-bs-target="#banner-collape" data-bs-toggle="collapse" type="button">Learn more</button>
@@ -175,13 +163,13 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="mb-5">About us</h3>
+            <h3 class="mb-5">팀원</h3>
             <ul class="nav nav-tabs" id="myTab" role="tablist">
               <li class="nav-item" role="presentation">
-                <button class="nav-link active" id="team-tab" data-bs-toggle="tab" data-bs-target="#team" type="button" role="tab" aria-controls="team" aria-selected="true">Our team</button>
+                <button class="nav-link active" id="team-tab" data-bs-toggle="tab" data-bs-target="#team" type="button" role="tab" aria-controls="team" aria-selected="true">우리 팀</button>
               </li>
               <li class="nav-item" role="presentation">
-                <button class="nav-link" id="photos-tab" data-bs-toggle="tab" data-bs-target="#photos" type="button" role="tab" aria-controls="photos" aria-selected="false">Photos</button>
+                <button class="nav-link" id="photos-tab" data-bs-toggle="tab" data-bs-target="#photos" type="button" role="tab" aria-controls="photos" aria-selected="false">사진</button>
               </li>
             </ul>
             <div class="tab-content" id="myTabContent">
@@ -219,7 +207,7 @@
           </div>
           <div class="col-lg-6">
             <div class="faq">
-              <h3 class="mb-4">Our Three Commitment</h3>
+              <h3 class="mb-4">회사 3가지 규칙</h3>
               <div class="accordion accordion-flush" id="accordionFlushFaq">
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="flush-headingOne">
@@ -305,7 +293,6 @@
                     </div>
                     <div>
                       <p class="lead">
-                        <a href="tel:02-111-1111" class="text-white">
                           <strong>010-3694-5500</strong>
                         </a>
                       </p>
@@ -316,7 +303,6 @@
                 <div class="text-white">
                   <span>
                     <i class="fa fa-envelope fa-lg me-3"></i>
-                    <a href="mailto:jdoe@email.com" class="text-white">
                       <strong>pkw85428@naver.com</strong>
                     </a>
                   </span>
