--- a/project_final/front/sinup.htm
+++ b/project_final/front/sinup.htm
@@ -21,6 +21,9 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./assets/css/app.css" />
   <link rel="stylesheet" href="assets/css/main.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="/project_final/front/css/log.css">
+  <script src="/project_final/front/js/log.js"></script>
   
 </head>
 
@@ -37,33 +40,8 @@
             </a>
           </div>
           <div class="col-5 text-end socisals">
-            <nav>
-              <div class="inner">
-                <div class="nav-container">
-                  <div class="sign-container">
-          
-
-                    <!-- 회원 -->
-                    <div class="signed hidden">
-                      <div class="dropdown">
-                        <div class="dropdown-button">
-                          Welcome <span class="nickname"></span>님
-                        </div>
-                        <div class="dropdown-content">
-                          <button id="sign-out">로그아웃</button>
-                        </div>
-                        <div class="basket-button">
-                          <button id="basket" onclick="location.href='basket.html'">
-                            basket
-                          </button>
-                        </div>
-                      </div>
-                    </div>
                   </div>
                 </div>
-              </div>
-            </nav>
-          </div>
         </div>
       </div>
     </section>
@@ -129,7 +107,7 @@
                 <a href="signin.html" class="text-decoration-none link-dark">로그인</a>
               </li>
               <li>
-                <a href="signup.html" class="text-decoration-none link-dark">회원가입</a>
+                <a href="sinup.html" class="text-decoration-none link-dark">회원가입</a>
               </li>
               <li>
                 <a href="#" class="btn btn-outline-secondary w-100"><i class="fa fa-search"></i></a>
@@ -141,6 +119,19 @@
     </nav>
   </header>
 
+  <div class="container12">
+    <div class="form-container12" id="signupForm">
+        <h2>회원가입</h2>
+        <label for="signupUsername">아이디:</label>
+        <input type="text" id="signupUsername" name="signupUsername" required>
+        <label for="signupPassword">비밀번호:</label>
+        <input type="password" id="signupPassword" name="signupPassword" required>
+        <button type="button" id="signupBtn">회원가입</button>
+    </div>
+</div>
+
+
+<br><br><br><br><br><br><br><br><br><br><br>
   <footer class="footer py-5">
     <div class="section-content">
       <div class="container wow fadeInUp">
